--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
-theme: jekyll-theme-cayman
+title: 34b
+description: >
+  is good.
+baseurl: ""
+url: "http://34b.cc"
+paginate:	2 # The number of posts to show per page on your homepage
+name: "34b.cc"
+markdown: kramdown
+permalink: none
+kramdown:
+  parse_block_html: true
+gems:
+  - jekyll-paginate
